--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
             <li><a href="#">Terms</a></li>
           </ul>
         </div>
-        <p>Copyright &copy; Design &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a>. All rights reserved.</p>
+        <p>Copyright &copy; 2017 Design &amp; Developed by <a href="http://infius.github.io">Infius</a>. All rights reserved.</p>
       </div>
     </div>
   </div>
