--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/preload.min.css" />
     <link rel="stylesheet" href="assets/css/plugins.min.css" />
-    
+    <link rel="stylesheet" href="assets/css/material-design-iconic-font.css" />
+
     <link rel="stylesheet" href="assets/css/style.light-blue-500.min.css" />
     <link rel="stylesheet" href="assets/css/width-boxed.min.css" id="ms-boxed" disabled="">
     <!--[if lt IE 9]>
