--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,10 +7,12 @@
     <meta name="description" content="Material Style Theme">
     <link rel="shortcut icon" href="assets/img/favicon.png?v=3">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="assets/css/preload.min.css" />
     <link rel="stylesheet" href="assets/css/plugins.min.css" />
-    <link rel="stylesheet" href="assets/css/material-design-iconic-font.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
 
     <link rel="stylesheet" href="assets/css/style.light-blue-500.min.css" />
     <link rel="stylesheet" href="assets/css/width-boxed.min.css" id="ms-boxed" disabled="">
